Fixed code overflow issues with new SI links in footer

--- a/public/stylesheets/screen.css
+++ b/public/stylesheets/screen.css
@@ -133,7 +133,7 @@ body {
 
 #code {
   background:url(/images/background-code-loading.gif) center center no-repeat;
-  height:210px;
+  height:200px;
   overflow:auto;
 }
 
